# petunia

./: CMakeLists.txt  LICENSE.md  README.md  build_msvc64.bat
googletest/googletest/: CMakeLists.txt
include/petunia/: CppSQLite3.h  ipc_medium.h  ipc_medium_default.h  ipc_medium_inprocess.h  ipc_medium_nanomsg.h  ipc_medium_zmq.h  message.h  message_handler.h  osutils.h  petunia.h  petunia.hpp  types.h
src/: ipc_medium.cpp  ipc_medium_default.cpp  ipc_medium_inprocess.cpp  ipc_medium_nanomsg.cpp  ipc_medium_zmq.cpp  message.cpp  message_handler.cpp  osutils.cpp  petunia.cpp
src/CppSQLite3/: CppSQLite3.h
src/sqlite3/: CppSQLite3.cpp
test/: CMakeLists.txt  PetuniaTests.cpp
